--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:       Type
-email:       ''
-description: ''
+title:       'Choi Wanbok'
+email:       'choi@wanbok.com'
+description: 'Wanbok's Blog'
 baseurl:     '' # The subpath of your site, e.g. /blog
-url:         'https://type-jekyll.aspirethemes.com/' # The base hostname & protocol for your site
-twitter:     ''
-github:      ''
+url:         'https://wanbok.com' # The base hostname & protocol for your site
+twitter:     'https://twitter.com/wanbok'
+github:      'https://github.com/wanbok'
 instagram:   ''
-facebook:    ''
+facebook:    'https://fb.com/wanbok'
 
 markdown:  kramdown
 permalink: pretty
